@@ -2,9 +2,12 @@
 ################################################################################
 file=test.cpp
 
+map="${1:-Castles.smf}"
+mod="${2:-ba621.sd7}"
+
 g++ -g -I../../../rts/System $file ../../../game/unitsync.so && \
-echo ./a.out Castles.smf ba621.sd7 && \
-./a.out Castles.smf ba621.sd7
+echo ./a.out "$map" "$mod" && \
+./a.out "$map" "$mod"
 
 exit
 
